# mezzanine-seminars

./: .releaserc  LICENSE  MANIFEST.in  README.md  setup.cfg
.github/workflows/: main.yml
mezzanine_seminars/: __init__.py  admin.py  apps.py  defaults.py  models.py  urls.py  views.py
mezzanine_seminars/admin/: __init__.py  seminars.py  surveys.py
mezzanine_seminars/forms/: __init__.py  stripe.py  surveys.py
mezzanine_seminars/migrations/: 0001_initial.py  0002_blank_subject.py  0002_registration_codes.py  0003_auto_20200916_1638.py  0004_auto_20200916_1713.py  0005_auto_20200918_0825.py  0006_auto_20200921_1419.py
mezzanine_seminars/models/: __init__.py  seminars.py  surveys.py
mezzanine_seminars/templates/admin/mezzanine_seminars/seminar/: change_form.html
mezzanine_seminars/templates/admin/mezzanine_seminars/surveyresponse/: change_list.html
mezzanine_seminars/templates/seminars/: registration_create.html  seminar_detail.html  seminar_list.html  survey_response_create.html
mezzanine_seminars/templates/seminars/emails/: registration_confirmation.html  registration_confirmation.txt
mezzanine_webinars/: __init__.py  admin.py  apps.py  models.py
mezzanine_webinars/migrations/: 0001_initial.py  0002_blank_subject.py
tests/: conftest.py  test_seminars.py  test_stripe.py  test_surveys.py  utils.py
