[metadata]
name = mezzanine_seminars
version = attr: mezzanine_seminars.__version__
description = Seminar platform for Mezzanine CMS
long_description = file: README.md
long_description_content_type = text/markdown
author = Unplug Studio
author_email = developers@unplug.studio
url = http://github.com/unplugstudio/mezzanine-seminars
license_file = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=2.7, !=3.0, !=3.1, !=3.2, !=3.3, !=3.4, !=3.5, <3.9
packages = find:
include_package_data = true
install_requires =
    mezzanine >=4,<5
    mezzy >=2.4

[options.extras_require]
testing =
    pytest-django >= 3, <4
codestyle =
    flake8 >= 3, <4
    black==20.8b1

# Building

[bdist_wheel]
universal = 1

# Testing

[tox:tox]
envlist =
    py{27,38}-dj{18,111}
    flake8
    black
    package

[testenv]
# Run test suite
deps =
    .[testing]
    dj18: Django>=1.8, <1.9
    dj111: Django>=1.11, <2
setenv =
    PYTHONPATH={toxinidir}
commands =
    # pytest --basetemp="{envtmpdir}" --ignore mezzanine_seminars-0.0.dev0 {posargs}

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings

[testenv:package]
# Check package integrity and compatibility with PyPI
deps =
    twine
    check-manifest
skip_install = true
commands =
    python setup.py -q sdist --dist-dir="{envtmpdir}/dist"
    twine check "{envtmpdir}/dist/*"
    check-manifest --ignore-bad-ideas '*.mo' {toxinidir}

[testenv:format]
# This env is not run by default. It's provided here for you
# to easily autoformat code by running `tox -e format`
skip_install = true
deps = .[codestyle]
commands = black .

[testenv:black]
# Lint with black
skip_install = true
deps = .[codestyle]
commands = black . --check

[testenv:flake8]
# Lint with flake8
skip_install = true
deps = .[codestyle]
commands = flake8 .

[flake8]
# Configured to match black
ignore =
    E203
    W503
    E731
max-line-length = 88
exclude =
    migrations
    .tox
    .git
    .eggs
    *.egg-info
    build
    dist

[gh-actions]
# Connect GitHub Action matrices with tox envs
python =
    2.7: py27
    3.8: py38, flake8, black, package
