[metadata]
name = mezzanine_seminars
version = attr: mezzanine_seminars.__version__
description = Seminar platform for Mezzanine CMS
long_description = file: README.md
long_description_content_type = text/markdown
author = Unplug Studio
author_email = developers@unplug.studio
url = http://github.com/unplugstudio/mezzanine-seminars
license_file = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
python_requires = >=2.7
packages = mezzanine_seminars
include_package_data = true
install_requires =
    django >=1.8, <2.0
    django-contrib-comments==1.8
    mezzanine >=4, <5
    mezzy >=2.4, <3
    unicodecsv

[options.extras_require]
stripe =
    stripe >=2.48, <3
testing =
    django-dynamic-fixture >=3, <4
    django-functest >=1, <2
    mock
    pathlib2
    pytest-django >= 3, <4

# Building

[bdist_wheel]
universal = 1

# Testing

[tox:tox]
envlist =
    py27-dj{18,111}
    flake8
    black
    package

[testenv]
# Run test suite
deps =
    .[testing]
    .[stripe]
    dj18: django >=1.8, <1.9
    dj111: django >=1.11, <2.0
setenv =
    PYTHONPATH={toxinidir}
commands =
    pytest --basetemp="{envtmpdir}" --ignore mezzanine_seminars-0.0.dev0 {posargs}

[testenv:package]
# Check package integrity and compatibility with PyPI
deps =
    twine
    check-manifest
skip_install = true
commands =
    python setup.py -q sdist --dist-dir="{envtmpdir}/dist"
    twine check "{envtmpdir}/dist/*"
    check-manifest --ignore-bad-ideas '*.mo' {toxinidir}

[testenv:format]
# This env is not run by default. It's provided here for you
# to easily autoformat code by running `tox -e format`
skip_install = true
deps = black==20.8b1
commands = black .

[testenv:black]
# Lint with black
skip_install = true
deps = {[testenv:format]deps}
commands = black . --check

[testenv:flake8]
# Lint with flake8
basepython=python2.7
skip_install = true
deps = flake8 >= 3, <4
commands = flake8 .

[flake8]
# Configured to match black
ignore =
    E203
    W503
    E731
max-line-length = 88
exclude =
    migrations
    .tox
    .git
    .eggs
    *.egg-info
    build
    dist

[gh-actions]
# Connect GitHub Action matrices with tox envs
python =
    2.7: py27, flake8
    3.8: black, package
